cc_binary(
    name = "unit-test",
    srcs = [
        "unit-test.cpp",
    ],
)

cc_binary(
    name = "service-bus-test",
    srcs = [
        "service-bus-test.cpp",
    ],
)

cc_binary(
    name = "init-gmock",
    srcs = [
        "init-gmock.cpp",
    ],
    deps = ["@com_google_googletest//:gtest_main"],
)